# advanced_Cpp

./: README.md
.github/workflows/: ci.yaml  ci_homework3.yaml
homework2/: CMakeLists.txt
homework2/lib/: a.out  custom_matrix.cpp  custom_matrix.h  custom_vector.cpp  custom_vector.h
homework2/linters/: run.sh
homework2/tests/: CMakeLists.txt  matrix_test.cpp  vector_test.cpp
homework3/: .gitignore  CMakeLists.txt  a.out
homework3/set_project_dir/: set.h
homework3/tests/: CMakeLists.txt  must_have_test_set.cpp  test.cpp
